# rem-extract

./: .gitignore  0_extract_tests.rs  0_test_info.csv  1_make_rust_toolchaintoml.py  2_extract_tests.py  3_make_test_details_rs.py  4_convert_to_project.py  5_fixup_semicolons.py  Cargo.toml  README.md  changelog.md  extract_tests.py  extract_tests.rs  extract_tests_2.py  extract_tests_3.py  extraction old.rs  extraction.rs  fixup_semicolons.py  lsp_test.py  rust-toolchain.toml  rust_impl.rs  test_info.csv  todo.txt
.github/workflows/: ci.yml
argument_and_locals/: Cargo.toml
argument_form_expr/: Cargo.toml
argument_form_expr/src/: main.rs
argument_used_twice_form_expr/: Cargo.toml
break_from_nested_and_outer_loops/: Cargo.toml
break_from_nested_loop/: Cargo.toml
break_loop/: Cargo.toml
break_loop_nested_labeled/: Cargo.toml
break_loop_nested_labeled/src/: main.rs
break_loop_with_if/: Cargo.toml
break_loop_with_if/src/: main.rs
break_with_value/: Cargo.toml
break_with_value/src/: main.rs
break_with_value_and_return/: Cargo.toml
correct_output/: argument_and_locals.rs  argument_form_expr.rs  argument_used_twice_form_expr.rs  break_from_nested_and_outer_loops.rs  break_from_nested_loop.rs  break_loop.rs  break_loop_nested.rs  break_loop_nested_labeled.rs  break_loop_with_if.rs  break_stmt.rs  break_with_value.rs  break_with_value_and_label.rs  break_with_value_and_return.rs  closure_arguments.rs  comments_in_block_expr.rs  continue_loop_nested_labeled.rs  copy_custom_used_after.rs  copy_used_after.rs  decode.rs  does_not_add_extra_whitespace.rs  does_not_import_control_flow.rs  dont_emit_type_with_hidden_lifetime_parameter.rs  empty_generic_param_list.rs  extract_cast.rs  extract_does_not_tear_body_apart.rs  extract_does_not_tear_comments_apart.rs  extract_does_not_wrap_res_in_res.rs  extract_from_nested.rs  extract_function_copies_comment_at_end.rs  extract_function_copies_comment_at_start.rs  extract_function_copies_comment_in_between.rs  extract_function_copies_comment_indented.rs  extract_function_does_preserve_whitespace.rs  extract_function_from_trait_with_existing_non_empty_impl_block.rs  extract_function_long_form_comment.rs  extract_method_from_trait_impl.rs  extract_method_from_trait_with_existing_non_empty_impl_block.rs  extract_method_from_trait_with_multiple_existing_impl_blocks.rs  extract_method_from_trait_with_multiple_existing_trait_impl_blocks.rs  extract_mut_ref_param_has_no_mut_binding_in_loop.rs  (+76 more)
examples/example1/: Cargo.toml
input/: argument_and_locals.rs  argument_form_expr.rs  argument_used_twice_form_expr.rs  break_from_nested_and_outer_loops.rs  break_from_nested_loop.rs  break_loop.rs  break_loop_nested.rs  break_loop_nested_labeled.rs  break_loop_with_if.rs  break_stmt.rs  break_with_value.rs  break_with_value_and_label.rs  break_with_value_and_return.rs  closure_arguments.rs  comments_in_block_expr.rs  continue_loop_nested_labeled.rs  copy_custom_used_after.rs  copy_used_after.rs  decode.rs  does_not_add_extra_whitespace.rs  does_not_import_control_flow.rs  dont_emit_type_with_hidden_lifetime_parameter.rs  empty_generic_param_list.rs  extract_cast.rs  extract_does_not_tear_body_apart.rs  extract_does_not_tear_comments_apart.rs  extract_does_not_wrap_res_in_res.rs  extract_from_nested.rs  extract_function_copies_comment_at_end.rs  extract_function_copies_comment_at_start.rs  extract_function_copies_comment_in_between.rs  extract_function_copies_comment_indented.rs  extract_function_does_preserve_whitespace.rs  extract_function_from_trait_with_existing_non_empty_impl_block.rs  extract_function_long_form_comment.rs  extract_method_from_trait_impl.rs  extract_method_from_trait_with_existing_non_empty_impl_block.rs  extract_method_from_trait_with_multiple_existing_impl_blocks.rs  extract_method_from_trait_with_multiple_existing_trait_impl_blocks.rs  extract_mut_ref_param_has_no_mut_binding_in_loop.rs  (+76 more)
input/argument_and_locals/: Cargo.toml
input/argument_form_expr/: Cargo.toml
output/: extract_function_copies_comment_in_between.rs  extract_partial_block.rs  multi_variables_defined_inside_and_used_after_mutably_no_ret.rs  mut_param_because_of_mut_ref.rs  no_args_from_stmt_unit.rs  return_to_parent.rs  simple_example.rs  try_and_return_ok.rs  try_option_unit.rs  try_option_with_return.rs  try_result.rs  try_result_with_return.rs  two_variables_defined_inside_and_used_after_no_ret.rs
rem-extract/: Cargo.toml
rem-extract/correct_output/: break_loop_nested_labeled.rs  break_with_value.rs  empty_generic_param_list.rs  extract_does_not_tear_comments_apart.rs  extract_function_from_trait_with_existing_non_empty_impl_block.rs  extract_function_long_form_comment.rs  extract_return_stmt.rs  extract_with_await.rs  filters_unused_nested_generics.rs  function_expr.rs  indented_stmts.rs  multi_variables_defined_inside_and_used_after_mutably_no_ret.rs  mut_param_because_of_mut_ref.rs  no_args_if_else.rs  no_args_if_let_else.rs  struct_with_two_fields_pattern_define_variables.rs  variable_defined_inside_and_used_after_mutably_no_ret.rs
rem-extract/input/: comments_in_block_expr.rs  does_not_add_extra_whitespace.rs  empty_generic_param_list.rs  extract_does_not_wrap_res_in_res.rs  extract_mut_ref_param_has_no_mut_binding_in_loop.rs  extract_with_await.rs  extract_with_await_and_result_producing_match_expr.rs  indented_stmts.rs  no_args_from_loop_with_return.rs  part_of_expr_stmt.rs  return_to_parent.rs  tail_expr_of_tail_block_nested.rs  try_result.rs  two_variables_defined_inside_and_used_after_no_ret.rs  unresolveable_types_default_to_placeholder.rs
rem-extract/src/: args.rs  error.rs  extract_tests.rs  extraction.rs  extraction_utils.rs  lib.rs  main.rs  test_details.rs  utils.rs
rem-extract/src/rust_analyzer_local/: mod.rs  range.rs  traits.rs
scripts/: 0_linux.py  build.sh  build_safe.sh  build_tests.sh  cleanup.sh  example1.sh  fixup_cargotoml.py  get_offset.py  run_fresh.sh  test.sh  test_safe.sh
src/: args.rs  error.rs  extract_tests.rs  extraction.rs  extraction_utils.rs  lib.rs  main.rs  test.rs  test_details.rs
(+255 files in other folders)
