[package]
name = "rem-extract"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["Matthew Britton <matt.britton@anu.edu.au>"]
licence = "MIT"
description = "Providing extract method capability for the REM toolchain"
repository = "https://github.com/RuleBrittonica/rem-extract"
readme = "README.md"
resolver = "2"

exclude = [
    "input/**",
]

[dependencies]
log = "0.4.22"
flexi_logger = "0.29.0"
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
syn = { version = "2.0.79", features = ["full"]}
quote = "1.0.37"
rem-utils = "0.1.5"
lazy_static = "1.5.0"
regex = "1.10.6"
proc-macro2 = "1.0.86"
diff = "0.1.13"
cov-mark = "2.0.0-pre.1"
camino = "1.1.9"

ra_ap_hir = "0.0.237"
ra_ap_ide = "0.0.237"
ra_ap_ide_assists = "0.0.237"
ra_ap_ide_db = "0.0.237"
ra_ap_load-cargo = "0.0.237"
ra_ap_project_model = "0.0.237"
ra_ap_rust-analyzer = "0.0.237"
ra_ap_vfs = "0.0.237"

[build-dependencies]

[dev-dependencies]
tempfile = "3.13"



[features]
default = []

[[bin]]
name = "rem-extract"
path = "src/main.rs"
