[package]
name = "rem-extract"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Britton <matt.britton@anu.edu.au>"]
licence = "MIT"
description = "Providing extract method capability for the REM toolchain"
repository = "https://github.com/RuleBrittonica/rem-extract"
readme = "README.md"

[dependencies]
log.workspace = true
flexi_logger.workspace = true
clap.workspace = true
colored.workspace = true
syn.workspace = true
quote.workspace = true
lazy_static.workspace = true
regex.workspace = true
diff.workspace = true
rem-utils.workspace = true

[build-dependencies]

[dev-dependencies]
tempfile = "3.12"

[features]
default = []

[[bin]]
name = "rem-extract"
path = "src/main.rs"
