[package]
name = "rem-extract"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Britton <matt.britton@anu.edu.au>"]
licence = "MIT"
description = "Providing extract method capability for the REM toolchain"
repository = "https://github.com/RuleBrittonica/rem-extract"
readme = "README.md"

[dependencies]
log.workspace = true
flexi_logger.workspace = true
clap.workspace = true
colored.workspace = true
syn.workspace = true
quote.workspace = true
lazy_static.workspace = true
regex.workspace = true
diff.workspace = true
rem-utils.workspace = true

ra_ap_hir.workspace = true
ra_ap_ide.workspace = true
ra_ap_ide_assists.workspace = true
ra_ap_ide_db.workspace = true
ra_ap_load-cargo.workspace = true
ra_ap_project_model.workspace = true
ra_ap_rust-analyzer.workspace = true
ra_ap_vfs.workspace = true

[build-dependencies]

[dev-dependencies]
tempfile = "3.12"

[features]
default = []

[[bin]]
name = "rem-extract"
path = "src/main.rs"
